--- a/phone/src/main/AndroidManifest.xml
+++ b/phone/src/main/AndroidManifest.xml
@@ -22,18 +22,28 @@
             android:enabled="true"
             android:exported="true" >
         </service>
-        <service
-            android:name=".services.GoogleApiService"
+        <service android:name=".services.GoogleApiService"
             android:enabled="true"
             android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+
+
+
         </service>
-        <service
-            android:name=".services.Listener"
-            android:enabled="true"
-            android:exported="true" >
-        </service>
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
+
+
+
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 </manifest>
