GoogleAPI [PHONE] -Implement GoogleAPiService -Implements missed TAGS [WEAR] -Basical Implementation of WearableListenerService. -Clone IntervalData model -Create Rudimentary layout for wear

--- a/phone/src/main/AndroidManifest.xml
+++ b/phone/src/main/AndroidManifest.xml
@@ -40,6 +40,11 @@
     </application>
 
 
+    <service android:name=".WearableListenerService">
+        <intent-filter>
+            <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
+        </intent-filter>
+    </service>
 
 
     <uses-permission android:name="android.permission.VIBRATE" />
