--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.unai.myapplication" >
+    package="com.example.unai.myapplication" android:versionCode="2" android:versionName="1.0.1">
 
     <uses-feature android:name="android.hardware.type.watch" />
 
@@ -14,17 +14,20 @@
             android:label="@string/app_name" >
 
         </activity>
-
-
+        <service android:name=".GoogleApiService"
+                 android:enabled="true"
+                 android:exported="true" >
+        </service>
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
 
         <service android:name=".ListenerService">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
+
 
     </application>
 
