[shared] -Add a new library. This library is shared instead phone  and wear app. [utils] -Add a new library for generic utils. -Create a primitive sliding Menu [phone] -Implemented a sliding menu. -Implemented a lot of Hiit Modes. -Little fix errors.
[wear]
-Now android wear app should refresh correctly.
-Added android wear circle mode (New testing).
-New UI for square watches.
-The train type should be show.

--- a/phone/src/main/AndroidManifest.xml
+++ b/phone/src/main/AndroidManifest.xml
@@ -23,12 +23,12 @@
             android:enabled="true"
             android:exported="true" >
         </service>
-        <service android:name=".services.GoogleApiService"
+        <service android:name=".wearable.WearableService"
             android:enabled="true"
             android:exported="false" >
         </service>
 
-        <service android:name=".services.WearableListenerService">
+        <service android:name=".wearable.WearableListenerService">
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
