--- a/phone/build.gradle
+++ b/phone/build.gradle
@@ -26,4 +26,7 @@ dependencies {
     compile 'com.android.support:support-v4:20.+'
     compile 'com.google.android.gms:play-services-wearable:+'
     wearApp project(':wear')
+    compile project(':utils')
+    compile project(':shared')
+
 }
