--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -1,33 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.unai.myapplication" android:versionCode="2" android:versionName="1.0.1">
+    package="com.example.unai.intervaltraining"
+    android:versionCode="2"
+    android:versionName="1.0.1" >
 
     <uses-feature android:name="android.hardware.type.watch" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
-            android:name=".MyActivity"
+            android:name="com.vssnake.intervaltraining.wear.IntervalActivityListener"
             android:label="@string/app_name" >
-
         </activity>
-        <service android:name=".GoogleApiService"
-                 android:enabled="true"
-                 android:exported="true" >
+
+        <service
+            android:name="com.vssnake.intervaltraining.wear.GoogleApiService"
+            android:enabled="true"
+            android:exported="true" >
         </service>
+
+        <service
+            android:name="com.vssnake.intervaltraining.wear.interval.IntervalWearService"
+            android:enabled="true"
+            android:exported="false" >
+        </service>
+
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <service android:name=".ListenerService">
+        <service android:name="com.vssnake.intervaltraining.wear.ListenerService" >
             <intent-filter>
                 <action android:name="com.google.android.gms.wearable.BIND_LISTENER" />
             </intent-filter>
         </service>
 
+
+
+        <activity
+            android:name="com.vssnake.intervaltraining.wear.interval.ListTrainActivity"
+            android:label="@string/title_activity_list_train" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name="com.vssnake.intervaltraining.wear.interval.TrainDescriptionActivity"
+            android:label="@string/title_activity_train_description" >
+        </activity>
+        <activity
+            android:name="com.vssnake.intervaltraining.wear.IntervalActivity"
+            android:label="@string/title_activity_train_description" >
+        </activity>
 
     </application>
 
