[General] -Update Play services -Add support Annotations
[Wear]
-Add new images
-Add new Round layouts
-Litle Fixes
[Utils]
-Create a activity that returns a hour or a number in your spinners
[Shared_lib]
-Modify the algorithm to format the time.
-Add new URL to WearableService
-A lot of changes in IntervalStaticData to allow the new Synchronization
-Put straining status outside of the class TrainingBase_Service
[Phone]
-Remove the icons in the list.
-Add a library for custom Dialogs (uk.me.lewisdeane.ldialogs)
-Create a model for shared information between the phone and watch.
-Create a edit mode and creation mode for intervals.
-Fix little bug with the width of of the total timer View

--- a/phone/build.gradle
+++ b/phone/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId 'vssnake.intervaltraining'
         minSdkVersion 15
         targetSdkVersion 20
-        versionCode 3
-        versionName '1.12'
+        versionCode 5
+        versionName '1.31'
     }
     buildTypes {
         release {
@@ -25,7 +25,9 @@ dependencies {
     // You must install or update the Support Repository through the SDK manager to use this dependency.
     compile 'com.android.support:support-v4:20.+'
     compile 'com.google.android.gms:play-services-wearable:+'
+    compile 'uk.me.lewisdeane.ldialogs:ldialogs@aar'
     wearApp project(':wear')
     compile project(':utils')
-    compile project(':shared')
+    compile project(':shared_lib')
+    compile project(':spinnerWheel')
 }
