--- a/phone/src/main/AndroidManifest.xml
+++ b/phone/src/main/AndroidManifest.xml
@@ -20,6 +20,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".interval.IntervalEditorActivity"
+            android:label="@string/title_activity_interval_editor"
+            android:screenOrientation="portrait">
+        </activity>
         <service
             android:name=".interval.IntervalPhoneService"
             android:enabled="true"
@@ -39,11 +44,6 @@
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
-
-        <activity
-            android:name=".interval.IntervalEditorActivity"
-            android:label="@string/title_activity_interval_editor" >
-        </activity>
     </application>
 
     <uses-permission android:name="android.permission.VIBRATE" />
