--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:0.12.+'
 
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -14,6 +15,9 @@ buildscript {
 
 allprojects {
     repositories {
+        flatDir{
+            dirs 'libs'
+        }
         jcenter()
     }
 }
