--- a/shared_lib/build.gradle
+++ b/shared_lib/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion '20.0.0'
 
     defaultConfig {
-        applicationId "com.vssnake.intervaltraining.shared"
+        applicationId "vssnake.intervaltraining.shared"
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.1"
     }
     buildTypes {
         release {
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:support-v4:20.+'
     compile 'com.google.android.gms:play-services-wearable:+'
+
 }
