--- a/shared_lib/src/main/AndroidManifest.xml
+++ b/shared_lib/src/main/AndroidManifest.xml
@@ -1,10 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.vssnake.intervaltraining.shared">
+    package="com.vssnake.intervaltraining.shared" >
 
-    <application android:allowBackup="true"
-        android:label="@string/app_name"
-
->
+    <application
+        android:allowBackup="true"
+        android:label="@string/app_name" >
 
     </application>
 
