--- a/utils/build.gradle
+++ b/utils/build.gradle
@@ -8,7 +8,7 @@ android {
         applicationId "com.vssnake.utils"
         minSdkVersion 15
         targetSdkVersion 19
-        versionCode 1
+        versionCode 2
         versionName "1.0"
     }
 
@@ -23,5 +23,8 @@ android {
 }
 
 dependencies {
+    compile 'com.android.support:support-annotations:20.0.0'
     compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile project(':spinnerWheel')
+    compile project(':shared_lib')
 }
