--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -9,8 +9,8 @@ android {
         applicationId "vssnake.intervaltraining"
         minSdkVersion 20
         targetSdkVersion 20
-        versionCode 1
-        versionName "1.0"
+        versionCode 3
+        versionName "1.3"
     }
     buildTypes {
         release {
@@ -24,5 +24,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.google.android.support:wearable:+'
     compile 'com.google.android.gms:play-services-wearable:+'
-    compile project(':shared')
+    compile project(':shared_lib')
 }
