--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -13,7 +13,34 @@
         android:theme="@android:style/Theme.DeviceDefault" >
         <activity
             android:name="com.vssnake.intervaltraining.wear.IntervalActivityListener"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:enabled="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
+
+        <activity
+            android:name="com.vssnake.intervaltraining.wear.interval.ListTrainActivity"
+            android:label="@string/title_activity_list_train" >
+            <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+        <intent-filter>
+            <action android:name="vnd.google.fitness.TRACK" />
+            <data android:mimeType="vnd.google.fitness.activity/other" />
+            <category android:name="android.intent.category.DEFAULT" />
+        </intent-filter>
+        </activity>
+        <activity
+            android:name="com.vssnake.intervaltraining.wear.interval.TrainDescriptionActivity"
+            android:label="@string/title_activity_train_description" >
+        </activity>
+        <activity
+            android:name="com.vssnake.intervaltraining.wear.IntervalActivity"
+            android:label="@string/title_activity_train_description" >
         </activity>
 
         <service
@@ -40,23 +67,7 @@
 
 
 
-        <activity
-            android:name="com.vssnake.intervaltraining.wear.interval.ListTrainActivity"
-            android:label="@string/title_activity_list_train" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name="com.vssnake.intervaltraining.wear.interval.TrainDescriptionActivity"
-            android:label="@string/title_activity_train_description" >
-        </activity>
-        <activity
-            android:name="com.vssnake.intervaltraining.wear.IntervalActivity"
-            android:label="@string/title_activity_train_description" >
-        </activity>
 
     </application>
 
